--- a/DumplingJump/DU/Resources/nibs/EquipmentViewLevelCell.xib
+++ b/DumplingJump/DU/Resources/nibs/EquipmentViewLevelCell.xib
@@ -46,7 +46,6 @@
 								<int key="NSvFlags">293</int>
 								<string key="NSFrame">{{2, 0}, {250, 75}}</string>
 								<reference key="NSSuperview" ref="171672305"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="411802563"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -84,7 +83,6 @@
 								<int key="NSvFlags">293</int>
 								<string key="NSFrame">{{79, 42}, {17, 23}}</string>
 								<reference key="NSSuperview" ref="171672305"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="707331371"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -103,7 +101,6 @@
 								<int key="NSvFlags">293</int>
 								<string key="NSFrame">{{96, 42}, {17, 23}}</string>
 								<reference key="NSSuperview" ref="171672305"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="461955168"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -116,7 +113,6 @@
 								<int key="NSvFlags">293</int>
 								<string key="NSFrame">{{113, 42}, {17, 23}}</string>
 								<reference key="NSSuperview" ref="171672305"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="883569319"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -129,7 +125,6 @@
 								<int key="NSvFlags">293</int>
 								<string key="NSFrame">{{130, 42}, {17, 23}}</string>
 								<reference key="NSSuperview" ref="171672305"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="269683442"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -142,7 +137,6 @@
 								<int key="NSvFlags">293</int>
 								<string key="NSFrame">{{147, 42}, {17, 23}}</string>
 								<reference key="NSSuperview" ref="171672305"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="763819445"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -155,7 +149,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{171, 40}, {69, 26}}</string>
 								<reference key="NSSuperview" ref="171672305"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="1002729004"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -170,7 +163,6 @@
 								<int key="NSvFlags">293</int>
 								<string key="NSFrame">{{198, 45}, {42, 21}}</string>
 								<reference key="NSSuperview" ref="171672305"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -201,7 +193,6 @@
 								<int key="NSvFlags">293</int>
 								<string key="NSFrame">{{83, 3}, {159, 42}}</string>
 								<reference key="NSSuperview" ref="171672305"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="281689530"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -231,7 +222,6 @@
 								<int key="NSvFlags">293</int>
 								<string key="NSFrame">{{22, 14}, {45, 45}}</string>
 								<reference key="NSSuperview" ref="171672305"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="1065978628"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -244,7 +234,6 @@
 						</array>
 						<string key="NSFrameSize">{254, 74}</string>
 						<reference key="NSSuperview" ref="734300500"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="443097978"/>
 						<string key="NSReuseIdentifierKey">_NS:11</string>
 						<object class="NSColor" key="IBUIBackgroundColor" id="660290682">
@@ -260,7 +249,6 @@
 				</array>
 				<string key="NSFrameSize">{254, 75}</string>
 				<reference key="NSSuperview"/>
-				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="171672305"/>
 				<string key="NSReuseIdentifierKey">_NS:9</string>
 				<reference key="IBUIBackgroundColor" ref="660290682"/>
@@ -466,86 +454,7 @@
 			<nil key="sourceID"/>
 			<int key="maxID">51</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes">
-			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
-				<object class="IBPartialClassDescription">
-					<string key="className">DUTableViewCell</string>
-					<string key="superclassName">UITableViewCell</string>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/DUTableViewCell.h</string>
-					</object>
-				</object>
-				<object class="IBPartialClassDescription">
-					<string key="className">EquipmentViewLevelCell</string>
-					<string key="superclassName">DUTableViewCell</string>
-					<object class="NSMutableDictionary" key="actions">
-						<string key="NS.key.0">didTapButton:</string>
-						<string key="NS.object.0">id</string>
-					</object>
-					<object class="NSMutableDictionary" key="actionInfosByName">
-						<string key="NS.key.0">didTapButton:</string>
-						<object class="IBActionInfo" key="NS.object.0">
-							<string key="name">didTapButton:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-					</object>
-					<dictionary class="NSMutableDictionary" key="outlets">
-						<string key="currentButton">UIButton</string>
-						<string key="descriptionLabel">UILabel</string>
-						<string key="equipmentImageView">UIImageView</string>
-						<string key="priceLabel">UILabel</string>
-						<string key="unlock0">UIImageView</string>
-						<string key="unlock1">UIImageView</string>
-						<string key="unlock2">UIImageView</string>
-						<string key="unlock3">UIImageView</string>
-						<string key="unlock4">UIImageView</string>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
-						<object class="IBToOneOutletInfo" key="currentButton">
-							<string key="name">currentButton</string>
-							<string key="candidateClassName">UIButton</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="descriptionLabel">
-							<string key="name">descriptionLabel</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="equipmentImageView">
-							<string key="name">equipmentImageView</string>
-							<string key="candidateClassName">UIImageView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="priceLabel">
-							<string key="name">priceLabel</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="unlock0">
-							<string key="name">unlock0</string>
-							<string key="candidateClassName">UIImageView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="unlock1">
-							<string key="name">unlock1</string>
-							<string key="candidateClassName">UIImageView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="unlock2">
-							<string key="name">unlock2</string>
-							<string key="candidateClassName">UIImageView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="unlock3">
-							<string key="name">unlock3</string>
-							<string key="candidateClassName">UIImageView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="unlock4">
-							<string key="name">unlock4</string>
-							<string key="candidateClassName">UIImageView</string>
-						</object>
-					</dictionary>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/EquipmentViewLevelCell.h</string>
-					</object>
-				</object>
-			</array>
-		</object>
+		<object class="IBClassDescriber" key="IBDocument.Classes"/>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaTouchFramework</string>
 		<bool key="IBDocument.PluginDeclaredDependenciesTrackSystemTargetVersion">YES</bool>
