--- a/DumplingJump/DU/Resources/nibs/BuyMoreStar.xib
+++ b/DumplingJump/DU/Resources/nibs/BuyMoreStar.xib
@@ -42,7 +42,6 @@
 						<int key="NSvFlags">274</int>
 						<string key="NSFrame">{{-90, -85}, {500, 650}}</string>
 						<reference key="NSSuperview" ref="364705947"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="26329562"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<object class="NSColor" key="IBUIBackgroundColor" id="660290682">
@@ -65,7 +64,6 @@
 								<int key="NSvFlags">319</int>
 								<string key="NSFrameSize">{299, 202}</string>
 								<reference key="NSSuperview" ref="26329562"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="22880200"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -80,7 +78,6 @@
 								<int key="NSvFlags">319</int>
 								<string key="NSFrame">{{39, 20}, {226, 33}}</string>
 								<reference key="NSSuperview" ref="26329562"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="102236742"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -112,7 +109,6 @@
 								<int key="NSvFlags">319</int>
 								<string key="NSFrame">{{31, 50}, {234, 44}}</string>
 								<reference key="NSSuperview" ref="26329562"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="722919858"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -146,7 +142,6 @@
 								<int key="NSvFlags">319</int>
 								<string key="NSFrame">{{59, 99}, {75, 75}}</string>
 								<reference key="NSSuperview" ref="26329562"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="37432183"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -184,7 +179,6 @@
 								<int key="NSvFlags">319</int>
 								<string key="NSFrame">{{174, 99}, {75, 75}}</string>
 								<reference key="NSSuperview" ref="26329562"/>
-								<reference key="NSWindow"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -206,7 +200,6 @@
 						</array>
 						<string key="NSFrame">{{11, 139}, {299, 202}}</string>
 						<reference key="NSSuperview" ref="364705947"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="592562145"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<reference key="IBUIBackgroundColor" ref="660290682"/>
@@ -215,7 +208,6 @@
 				</array>
 				<string key="NSFrameSize">{320, 480}</string>
 				<reference key="NSSuperview"/>
-				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="345918460"/>
 				<string key="NSReuseIdentifierKey">_NS:9</string>
 				<reference key="IBUIBackgroundColor" ref="660290682"/>
@@ -408,66 +400,7 @@
 			<nil key="sourceID"/>
 			<int key="maxID">82</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes">
-			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
-				<object class="IBPartialClassDescription">
-					<string key="className">BuyMoreStarViewController</string>
-					<string key="superclassName">UIViewController</string>
-					<dictionary class="NSMutableDictionary" key="actions">
-						<string key="didTapCancel:">id</string>
-						<string key="didTapConfirm:">id</string>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="actionInfosByName">
-						<object class="IBActionInfo" key="didTapCancel:">
-							<string key="name">didTapCancel:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-						<object class="IBActionInfo" key="didTapConfirm:">
-							<string key="name">didTapConfirm:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="outlets">
-						<string key="cancelButton">UIButton</string>
-						<string key="confirmButton">UIButton</string>
-						<string key="descriptionLabel">UILabel</string>
-						<string key="mask">UIImageView</string>
-						<string key="popupHolder">UIView</string>
-						<string key="titleLabel">UILabel</string>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
-						<object class="IBToOneOutletInfo" key="cancelButton">
-							<string key="name">cancelButton</string>
-							<string key="candidateClassName">UIButton</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="confirmButton">
-							<string key="name">confirmButton</string>
-							<string key="candidateClassName">UIButton</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="descriptionLabel">
-							<string key="name">descriptionLabel</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="mask">
-							<string key="name">mask</string>
-							<string key="candidateClassName">UIImageView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="popupHolder">
-							<string key="name">popupHolder</string>
-							<string key="candidateClassName">UIView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="titleLabel">
-							<string key="name">titleLabel</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-					</dictionary>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/BuyMoreStarViewController.h</string>
-					</object>
-				</object>
-			</array>
-		</object>
+		<object class="IBClassDescriber" key="IBDocument.Classes"/>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaTouchFramework</string>
 		<bool key="IBDocument.PluginDeclaredDependenciesTrackSystemTargetVersion">YES</bool>
